performance fixes
